Import of DDB/Convert-YText-v0.1.2 from CPAN.
gitpan-cpan-distribution: Convert-YText
gitpan-cpan-version:      v0.1.2
gitpan-cpan-path:         DDB/Convert-YText-v0.1.2.tar.gz
gitpan-cpan-author:       DDB
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -13,9 +13,9 @@ name: Convert-YText
 provides:
   Convert::YText:
     file: lib/Convert/YText.pm
-    version: v0.1.1_1
+    version: v0.1.2
 requires:
   Test::More: 0
 resources:
   homepage: http://pivot.cs.unb.ca/git/?p=convert-ytext.git;a=summary
-version: v0.1.1_1
+version: v0.1.2
